--- a/index.html
+++ b/index.html
@@ -13,57 +13,58 @@
 
   <section class="todoapp">
     <header class="header">
-      <h1>todos</h1>
-      <input class="new-todo" placeholder="What needs to be done?" autofocus>
+      <h1> {{title}} </h1> 
+      <!-- <h1 v-text="title"></h1>  -->
+      <input class="new-todo" placeholder="¿Que quieres hacer hoy?"
+      v-on:keyup.enter="createTodo"
+      autofocus>
     </header>
 
     <!-- This section should be hidden by default and shown when there are todos -->
-    <section class="main">
+    <section class="main" v-if = "todos.length">
       <input id="toggle-all" class="toggle-all" type="checkbox">
       <label for="toggle-all">Mark all as complete</label>
       <ul class="todo-list">
         <!-- These are here just to show the structure of the list items -->
         <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
-        <li class="completed">
+        <li v-for="todo in todos" v-bind:class="{ completed: todo.isDone, editing: todo === editing }">
           <div class="view">
-            <input class="toggle" type="checkbox" checked>
-            <label>Taste JavaScript</label>
-            <button class="destroy"></button>
+            <input class="toggle" type="checkbox" v-model="todo.isDone">
+            <label v-on:dblclick="startEditing(todo)">{{todo.text}}</label>
+            <button class="destroy" @click="destroyTodo(todo)"></button>
           </div>
-          <input class="edit" value="Create a TodoMVC template">
+          <input class="edit" 
+          @keyup.esc = "cancelEditing"
+          @keyup.enter = "finishEditing"
+          @blur = "finishEditing" 
+          v-bind:value = "todo.text">
         </li>
-        <li>
-          <div class="view">
-            <input class="toggle" type="checkbox">
-            <label>Buy a unicorn</label>
-            <button class="destroy"></button>
-          </div>
-          <input class="edit" value="Rule the web">
-        </li>
+        
       </ul>
     </section>
 
     <!-- This footer should hidden by default and shown when there are todos -->
-    <footer class="footer">
+    <footer class="footer" v-if = "todos.length">
       <!-- This should be `0 items left` by default -->
       <span class="todo-count">
-        <strong>0</strong> item left</span>
+        <strong>{{ activeTodos.length }}</strong> tarea(s) pendientes</span>
 
       <!-- Remove this if you don't implement routing -->
       <ul class="filters">
         <li>
-          <a class="selected" href="#/">All</a>
+          <a class="selected" href="#/">Todos</a>
         </li>
         <li>
-          <a href="#/active">Active</a>
+          <a href="#/active" >Activas</a>
         </li>
         <li>
-          <a href="#/completed">Completed</a>
+          <a href="#/completed">Completadas</a>
         </li>
       </ul>
 
       <!-- Hidden if no completed items are left ↓ -->
-      <button class="clear-completed">Clear completed</button>
+      <button class="clear-completed" @click="clearCompleted" v-show="completedTodos.length">Limpiar completadas</button>
+
     </footer>
   </section>
 
