--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </section>
 
   <footer class="info">
-    <p>Double-click to edit a todo</p>
+    <p>Double-click para editar tus tareas</p>
   </footer>
   
   <!-- Scripts here ↓ -->
